--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <button class="effective-button" type="button">Order Service</button>
       </section>
       <section>
-        <h2 class="benefits-title">Our benefits</h2>
+        <h2 class="visually-hidden">Our benefits</h2>
         <ul class="list">
           <li>
             <h3 class="item-benefits-title">Strategy</h3>
@@ -88,7 +88,7 @@
         </ul>
       </section>
       <section class="team-page">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul class="list">
           <li>
             <img
@@ -133,7 +133,7 @@
         </ul>
       </section>
       <section id="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
+        <h2 class="section-title">Our Portfolio</h2>
         <ul class="list">
           <li>
             <img
